Fix alignment

--- a/static/css/users/post.css
+++ b/static/css/users/post.css
@@ -1,14 +1,24 @@
 .header {
-    display: inline-block;
-    text-align: center;
-    vertical-align: middle;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.img-crop {
+    width: 80px;
+    height: 80px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+    float:left;
 }
 
 .org-image {
-    width: 15%;
-    border-radius: 50%;
-    float:left;
-    padding-right: 2em;
+    display: inline;
+    margin: 0 auto;
+    margin-left: -25%;
+    height: 100%;
+    width: auto;
 }
 
 .card {
@@ -19,15 +29,20 @@
     font-weight: 600;
     margin:0px;
     float:left;
-    vertical-align: middle;
-    padding-right: 1em;
+    padding-left: 1em;
 }
 
 .time {
     color: #AEAEAE;
     font-size: 14px;
     float:left;
-    vertical-align: middle;
+    padding-left: 2em;
+}
+
+.text {
+    display: flex;
+    padding-left: 100px;
+    padding-bottom: 2em;
 }
 
 .material-icons {
